# log-file-analyzer

./: README.md  issues_log.md
.github/workflows/: python-checks.yml
log-analyzer/: failed_entries.json  log_analyzer.py  model.py  processed_logs.json  pyproject.toml  successful_entries.json
log-analyzer/output/: failed_entries.json  successful_entries.json
log-analyzer/src/: log_analysis.py  log_analyzer.py  main.py  model.py  requirements.txt
log-analyzer/src/log_analyzer/: log_analysis.py  utilities.py
log-analyzer/src/output/: analyzer_output.json  log_analysis.json  log_analysis.xlsx
log-analyzer/tests/: test_log_analyzer.py
log-analyzer_old/output/: combined_entries.json
